--- a/src/index.html
+++ b/src/index.html
@@ -22,12 +22,11 @@
         <section class="profile page__section">
           <div
             class="profile__image"
-            style="background-image: url(<%=require('./images/avatar.jpg')%>)"
           ></div>
           <div class="profile__info">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <h1 class="profile__title"></h1>
             <button class="profile__edit-button" type="button"></button>
-            <p class="profile__description">Исследователь океана</p>
+            <p class="profile__description"></p>
           </div>
           <button class="profile__add-button" type="button"></button>
         </section>
@@ -42,21 +41,33 @@
         <div class="popup__content">
           <button type="button" class="popup__close"></button>
           <h3 class="popup__title">Редактировать профиль</h3>
-          <form class="popup__form" name="edit-profile">
+          <form class="popup__form" name="edit-profile" novalidate>
             <input
               type="text"
+              id="edit-profile-name-input"
               name="name"
               class="popup__input popup__input_type_name"
               placeholder="Имя"
               required
+              minlength="2"
+              maxlength="40"
+              pattern="^[A-Za-zА-ЯЁа-яё\s\-,]+$"
+              data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
             />
+            <span class="edit-profile-name-input-error popup__error"></span>
             <input
               type="text"
+              id="edit-profile-description-input"
               name="description"
               class="popup__input popup__input_type_description"
               placeholder="Занятие"
               required
+              minlength="2"
+              maxlength="200"
+              pattern="^[A-Za-zА-ЯЁа-яё\s\-,]+$"
+              data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
             />
+            <span class="edit-profile-description-input-error popup__error"></span>
             <!--Можно добавить required, они про него знают-->
             <button type="submit" class="button popup__button">
               Сохранить
@@ -68,21 +79,29 @@
         <div class="popup__content">
           <button type="button" class="popup__close"></button>
           <h3 class="popup__title">Новое место</h3>
-          <form class="popup__form" name="new-place">
+          <form class="popup__form" name="new-place" novalidate>
             <input
               type="text"
+              id="new-place-name-input"
               name="place-name"
               class="popup__input popup__input_type_card-name"
               placeholder="Название"
               required
+              minlength="2"
+              maxlength="30"
+              pattern="^[A-Za-zА-ЯЁа-яё\s\-,]+$"
+              data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
             />
+            <span class="new-place-name-input-error popup__error"></span>
             <input
               type="url"
+              id="new-place-link-input"
               name="link"
               class="popup__input popup__input_type_url"
               placeholder="Ссылка на картинку"
               required
             />
+            <span class="new-place-link-input-error popup__error"></span>
             <button type="submit" class="button popup__button">
               Сохранить
             </button>
@@ -96,6 +115,27 @@
           <p class="popup__caption"></p>
         </div>
       </div>
+
+      <div class="popup popup_type_avatar">
+        <div class="popup__content">
+          <button type="button" class="popup__close"></button>
+          <h3 class="popup__title">Обновить аватар</h3>
+          <form class="popup__form" name="update-avatar" novalidate>
+            <input
+              type="url"
+              id="new-avatar-input"
+              name="avatar-link"
+              class="popup__input popup__input_type_new-avatar"
+              placeholder="Ссылка на новый аватар"
+              required
+            />
+            <span class="new-avatar-input-error popup__error"></span>
+            <button type="submit" class="button popup__button">
+              Сохранить
+            </button>
+          </form>
+        </div>
+      </div>
     </div>
 
     <!--Относится к реализации 4-го спринта-->
@@ -107,7 +147,10 @@
         <!--Фоновое, инлайном-->
         <div class="card__description">
           <h2 class="card__title"></h2>
-          <button type="button" class="card__like-button"></button>
+          <div class="card__like">
+            <button type="button" class="card__like-button"></button>
+            <span class="card__count-like"></span>
+          </div>
         </div>
       </li>
     </template>
